Make navbar not fixed and adjust spacing within fieldcards

--- a/src/styles/marsMapMaker.scss
+++ b/src/styles/marsMapMaker.scss
@@ -181,18 +181,12 @@ $mars--border: rgb(46, 14, 8);
   padding-bottom: 100px;
 }
 
-.arrow {
-  font-size: 3em;
-}
-
-.arrowInfo {
-  font-size: 17px;
-}
-
 .fa-angle-double-right {
   position: relative;
   z-index: 15;
   top: 50%;
+  font-size: x-large;
+  padding-left: 2.5
 }
 
 .dropDown {
